syntax = "proto3";

import "protoc-gen-openapiv2/options/annotations.proto";

package pbevent;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/event;pbevent";

message EventSpec {
  string resource = 1;  // enum type
  uint32 resource_id = 2;
  string resource_uid = 3;
  string op_type = 4;  // enum type
}

message EventAttachment {
  uint32 biz_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
  uint32 app_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
}
